# advent-of-code-2022

./: Cargo.toml  README.md
.github/workflows/: tests.yml
inputs/: day1.txt  day5.txt
src/: day_1.rs  helpers.rs  lib.rs  main.rs
