[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# use jemallocator memory allocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[profile.release]
panic = "abort"
opt-level = 3     # 0-3
strip = 'symbols' # strip symbols from binary
lto = true        # enable link time optimization
debug = true      #necessary for flamegraph

[profile.test]
opt-level = 3     # 0-3
strip = 'symbols' # strip symbols from binary
lto = true        # enable link time optimization

[dependencies]
anyhow = "1.0.66"
rayon = "1.6.0"
array_tool = "1.0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
